增加代码段中注释的翻译

--- a/ch02.md
+++ b/ch02.md
@@ -252,16 +252,15 @@ FreeRTOS
 ```c
 int main( void )
 {
-    /* Perform any hardware setup necessary. */
+    /* 执行必要的硬件初始化。 */
     prvSetupHardware();
 
-    /* --- APPLICATION TASKS CAN BE CREATED HERE --- */
+    /* --- 这里用来创建应用程序任务。 --- */
 
-    /* Start the created tasks running. */
+    /* 开始运行创建的任务。 */
     vTaskStartScheduler();
 
-    /* Execution will only reach here if there was insufficient heap to
-       start the scheduler. */
+    /* 仅当没有足够堆内存来启动调度器时才会执行到这里。 */
     for( ;; );
     return 0;
 }
