--- a/ch03.md
+++ b/ch03.md
@@ -201,10 +201,10 @@ void vPortDefineHeapRegions( const HeapRegion_t * const pxHeapRegions );
 ```c
 typedef struct HeapRegion
 {
-    /* The start address of a block of memory that will be part of the heap.*/
+    /* 堆各部分内存块的起始地址 */
     uint8_t *pucStartAddress;
 
-    /* The size of the block of memory in bytes. */
+    /* 块大小，单位是字节 */
     size_t xSizeInBytes;
 
 } HeapRegion_t;
@@ -239,7 +239,7 @@ typedef struct HeapRegion
 
 
 ```c
-/* Define the start address and size of the three RAM regions. */
+/* 定义三个内存区域的起始地址和大小 */
 #define RAM1_START_ADDRESS ( ( uint8_t * ) 0x00010000 )
 #define RAM1_SIZE ( 64 * 1024 )
 
@@ -249,25 +249,23 @@ typedef struct HeapRegion
 #define RAM3_START_ADDRESS ( ( uint8_t * ) 0x00030000 )
 #define RAM3_SIZE ( 32 * 1024 )
 
-/* Create an array of HeapRegion_t definitions, with an index for each
-   of the three RAM regions, and terminate the array with a HeapRegion_t
-   structure containing a NULL address. The HeapRegion_t structures must
-   appear in start address order, with the structure that contains the
-   lowest start address appearing first. */
+/* 创建一个 HeapRegion_t 数组，其中包含三个内存区域中的每一个的索引。并使用一个
+   包含 NULL 地址的 HeapRegion_t 结构结束数组。HeapRegion_t 结构必须按起始地址
+   排序，包含最低地址的结构体需要位于第一个。 */
 const HeapRegion_t xHeapRegions[] =
 {
     { RAM1_START_ADDRESS, RAM1_SIZE },
     { RAM2_START_ADDRESS, RAM2_SIZE },
     { RAM3_START_ADDRESS, RAM3_SIZE },
-    { NULL,               0         } /* Marks the end of the array. */
+    { NULL,               0         } /* 代表数组结束。 */
 };
 
 int main( void )
 {
-    /* Initialize heap_5. */
+    /* 初始化 heap_5。 */
     vPortDefineHeapRegions( xHeapRegions );
 
-    /* Add application code here. */
+    /* 此处增加应用程序代码。 */
 }
 ```
 ***清单 3.3*** *共同描述了三个内存块的全部内容的 HeapRegion_t 数组*
@@ -286,35 +284,30 @@ int main( void )
 清单 3.4 展示了一种更方便、更好维护的示例。它声明了一个 `ucHeap` 数组，这个数组是一个普通变量，所以它成为链接器分配到 RAM1 的数据一部分。`xHeapRegions` 数组中第一个 `HeapRegion_t` 结构体描述了 `ucHeap` 的起始地址和大小，因此 `ucHeap` 成为 heap_5 管理的内存中的一部分。可以增加 `ucHeap` 的大小，直到链接器使用的内存消耗了所有 RAM1，如图 3.4 **C** 所示。
 
 
-<a name="list3.4" title="Listing 3.4 An array of HeapRegion\_t structures that describe all of RAM2, all of RAM3, but only part of RAM1"></a>
+<a name="list3.4" title="清单 3.4 描述所有 RAM2、所有 RAM 3、部分 RAM1 的 HeapRegion_t 结构体数组"></a>
 
 ```c
-/* Define the start address and size of the two RAM regions not used by
-   the linker. */
+/* 定义链接器不使用的两块内存区域的起始地址和大小 */
 #define RAM2_START_ADDRESS ( ( uint8_t * ) 0x00020000 )
 #define RAM2_SIZE ( 32 * 1024 )
 
 #define RAM3_START_ADDRESS ( ( uint8_t * ) 0x00030000 )
 #define RAM3_SIZE ( 32 * 1024 )
 
-/* Declare an array that will be part of the heap used by heap_5. The
-   array will be placed in RAM1 by the linker. */
+/* 声明一个数组，作为 heap_5 用到的堆的一部分。这个数组会被链接器放到 RAM1。 */
 #define RAM1_HEAP_SIZE ( 30 * 1024 )
 static uint8_t ucHeap[ RAM1_HEAP_SIZE ];
 
-/* Create an array of HeapRegion_t definitions. Whereas in Listing 3.3 the
-   first entry described all of RAM1, so heap_5 will have used all of
-   RAM1, this time the first entry only describes the ucHeap array, so
-   heap_5 will only use the part of RAM1 that contains the ucHeap array.
-   The HeapRegion_t structures must still appear in start address order,
-   with the structure that contains the lowest start address appearing first. */
-
+/* 创建一个 HeapRegion_t 数组。在清单 3.3 中，第一个元素描述了整个 RAM1，因此 heap_5 
+   会占用所有的 RAM1，这里不同的是，第一个元素值描述 ucHeap 数组，因此 heap_5 只会使用
+   包含 ucHeap 数组的部分 RAM1。HeapRegion_t 结构必须按起始地址排序，包含最低地址的结
+   构体需要位于第一个。 */
 const HeapRegion_t xHeapRegions[] =
 {
     { ucHeap,             RAM1_HEAP_SIZE },
     { RAM2_START_ADDRESS, RAM2_SIZE },
     { RAM3_START_ADDRESS, RAM3_SIZE },
-    { NULL,               0 }           /* Marks the end of the array. */
+    { NULL,               0 }           /* 代表数组结束。 */
 };
 ```
 ***清单 3.4*** *描述所有 RAM2、所有 RAM 3、部分 RAM1 的 HeapRegion_t 结构体数组*
@@ -435,38 +428,32 @@ void vPortGetHeapStats( HeapStats_t *xHeapStats );
 
 
 ```c
-/* Prototype of the vPortGetHeapStats() function. */
+/* vPortGetHeapStats() 函数原型。 */
 void vPortGetHeapStats( HeapStats_t *xHeapStats );
 
-/* Definition of the HeapStats_t structure. All sizes specified in bytes. */
+/* HeapStats_t 结构体的定义。 所有的大小单位都是字节。 */
+
 typedef struct xHeapStats
 {
-    /* The total heap size currently available - this is the sum of all the
-       free blocks, not the largest available block. */
+    /* 当前可用堆的总大小 - 这是所有空闲块的总大小，而不是最大可用块的大小。 */
     size_t xAvailableHeapSpaceInBytes;
 
-    /* The size of the largest free block within the heap at the time
-       vPortGetHeapStats() is called. */
+    /* 当 vPortGetHeapStats() 被调用时，堆中最大空闲块的大小。 */
     size_t xSizeOfLargestFreeBlockInBytes;
 
-    /* The size of the smallest free block within the heap at the time
-       vPortGetHeapStats() is called. */
+    /* 当 vPortGetHeapStats() 被调用时，堆中最小空闲块的大小。 */
     size_t xSizeOfSmallestFreeBlockInBytes;
 
-    /* The number of free memory blocks within the heap at the time
-       vPortGetHeapStats() is called. */
+    /* 当 vPortGetHeapStats() 被调用时，堆中空闲块的数量。 */
     size_t xNumberOfFreeBlocks;
 
-    /* The minimum amount of total free memory (sum of all free blocks)
-       there has been in the heap since the system booted. */
+    /* 从系统启动以来，堆中总空闲内存的最小值（所有空闲块的总和）。 */
     size_t xMinimumEverFreeBytesRemaining;
 
-    /* The number of calls to pvPortMalloc() that have returned a valid
-       memory block. */
+    /* 调用 pvPortMalloc() 且返回有效内存块的次数。 */
     size_t xNumberOfSuccessfulAllocations;
 
-    /* The number of calls to vPortFree() that has successfully freed a
-       block of memory. */
+    /* 调用 vPortFree() 且成功释放一块内存的次数， */
     size_t xNumberOfSuccessfulFrees;
 } HeapStats_t;
 ```
@@ -508,16 +495,13 @@ void vApplicationMallocFailedHook( void );
 
 
 ```c
-/* Functions provided by the application writer than allocate and free 
-   memory from a fast area of RAM. */
-
+/* 应用程序作者提供的函数，从快速内存区域分配和释放内存。 */
 void *pvMallocFastMemory( size_t xWantedSize );
 
 void vPortFreeFastMemory( void *pvBlockToFree );
 
-/* Add the following to FreeRTOSConfig.h to map the pvPortMallocStack()
-   and vPortFreeStack() macros to the functions that use fast memory. */
-
+/* 将以下 pvPortMallocStack() 和 vPortFreeStack() 映射到函数的宏放在
+   FreeRTOSConfig.h，以使用快速内存。 */
 #define pvPortMallocStack( x ) pvMallocFastMemory( x )
 
 #define vPortFreeStack( x ) vPortFreeFastMemory( x )
